initialized game board

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,9 @@
   <head>
     <title>Sumo Chicken</title>  
     <link rel="stylesheet" href="styles/style.css">
+    <script src="bower_components/phaser/build/phaser.min.js"></script>
   </head>
   <body>
+    <script src="js/game.js"></script>
   </body>
 </html>
