--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,9 @@
     <script src="bower_components/phaser/build/phaser.min.js"></script>
   </head>
   <body>
+    <script src="js/preload.js"></script>
+    <script src="js/create.js"></script>
+    <script src="js/update.js"></script>
     <script src="js/game.js"></script>
   </body>
 </html>
