Start working with socket.io communication between client/server, send startingLocation x,y using socket

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <title>Sumo Chicken</title>  
     <link rel="stylesheet" href="styles/style.css">
     <script src="bower_components/phaser/build/phaser.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
     <script src="js/preload.js"></script>
