--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
     <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
+    <script src="js/player.js"></script>
     <script src="js/preload.js"></script>
     <script src="js/create.js"></script>
     <script src="js/update.js"></script>
