--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Sumo Chicken</title>  
     <link rel="stylesheet" href="styles/style.css">
-    <script src="bower_components/phaser/build/phaser.min.js"></script>
+    <script src="lib/phaser/build/phaser.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
