Add favicon of chicken sprite

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <script src="lib/phaser/build/phaser.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
   </head>
   <body>
     <script src="build.js"></script>
