Add login page before game loads

--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,14 @@
   </head>
   <body>
     <script src="build.js"></script>
+    <div id='main'>
+      <h1 class='header'>SUMO CHICKEN</h1>
+      <form class='login' onsubmit='return startGame()'>
+        <p>enter a username</p>
+        <div><input type='text' id='username'></input></div>
+        <div><input class='submitButton' type='submit' value='play the game'></input></div>
+      </form> 
+      <a href='aboutUs.html'><p>About Us</p></a>
+    </div>
   </body>
 </html>
