Add another link back to game from about us page

--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -7,7 +7,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
   </head>
   <body id='aboutUs'>
-    <a href=".."><h1 class='header'>SUMO CHICKEN</h1></a>
+    <a href='..'><h1 class='header'>SUMO CHICKEN</h1></a>
+    <a href='..'>back to game</a>
     <h2>about the team</h2>
     <div class='teamMembers'>
       <span class='teamMember'>
