Add new pictures of the team

--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -12,21 +12,21 @@
     <h2>about the team</h2>
     <div class='teamMembers'>
       <span class='teamMember'>
-        <img src='assets/team/bernadette.jpg' class='teamMember-photo' title='Chris-photo'></img>
+        <img src='assets/team/chris.jpg' class='teamMember-photo' title='Chris-photo'></img>
         <p>CHRIS LOCKWOOD</p>
         <p>product owner</p>
         <a href='https://github.com/knockoutdonkey'><img src='assets/github.png' title='github-link'></img></a>
         <p class='teamMember-quote'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
       </span>
       <span class='teamMember'>
-        <img src='assets/team/bernadette.jpg' class='teamMember-photo' title='Devon-photo'></img>
+        <img src='assets/team/devon.jpg' class='teamMember-photo' title='Devon-photo'></img>
         <p>DEVON KOCH</p>
         <p>scrum master</p>
         <a href='https://github.com/devonkoch'><img src='assets/github.png' title='github-link'></img></a>
         <p class='teamMember-quote'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
       </span>
       <span class='teamMember'>
-        <img src='assets/team/bernadette.jpg' class='teamMember-photo' title='Shelley-photo'></img>
+        <img src='assets/team/shelley.jpg' class='teamMember-photo' title='Shelley-photo'></img>
         <p>SHELLEY WANG</p>
         <p>full-stack developer</p>
         <a href='https://github.com/shelleywang'><img src='assets/github.png' title='github-link'></img></a>
