New quotes for the about us page

--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -16,14 +16,14 @@
         <p>CHRIS LOCKWOOD</p>
         <p>product owner</p>
         <a href='https://github.com/knockoutdonkey'><img src='assets/github.png' title='github-link'></img></a>
-        <p class='teamMember-quote'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+        <p class='teamMember-quote'>I'm an incredibly professional developer who takes himself very seriously.</p>
       </span>
       <span class='teamMember'>
         <img src='assets/team/devon.jpg' class='teamMember-photo' title='Devon-photo'></img>
         <p>DEVON KOCH</p>
         <p>scrum master</p>
         <a href='https://github.com/devonkoch'><img src='assets/github.png' title='github-link'></img></a>
-        <p class='teamMember-quote'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+        <p class='teamMember-quote'>I like chicken.</p>
       </span>
       <span class='teamMember'>
         <img src='assets/team/shelley.jpg' class='teamMember-photo' title='Shelley-photo'></img>
